experiments/HtmlML.NativeEngine.Probe/native/htmlml_native_engine.h

typedef struct htmlml_engine htmlml_engine;
typedef struct htmlml_scene_view htmlml_scene_view;
typedef struct htmlml_input_event {
    uint32_t kind;
    uint32_t flags;
    uint64_t sequence;
    double x;
    double y;
    // For HTMLML_INPUT_RESIZE, delta_x carries the positive host device scale
    // factor. Zero retains ABI-v2 compatibility with hosts that predate scale
    // reporting and is interpreted as 1.0.
    double delta_x;
    double delta_y;
} htmlml_input_event;
/*
 * The acquired pointer is the immutable scene. Every pointer below remains
 * valid until htmlml_scene_release is called. A renderer can construct spans
 * over the arrays directly without further native calls or copying.
 */
struct htmlml_scene_view {
    uint32_t struct_size;
    uint32_t abi_version;
    htmlml_scene_header header;
    const htmlml_scene_command* commands;
    const htmlml_canvas_layer* canvas_layers;
    const htmlml_canvas_command* canvas_commands;
    const htmlml_scene_string* strings;
    const char* string_bytes;
    const htmlml_damage_rect* damage_rects;
    const void* lease_token;
    uint32_t canvas_command_count;
    uint32_t string_count;
    uint32_t string_byte_count;
    uint32_t reserved;
};
HTMLML_API uint32_t htmlml_engine_get_abi_version(void);
HTMLML_API uint8_t htmlml_engine_load_url(
    htmlml_engine* engine,
    const char* url,
    size_t url_length);
HTMLML_API uint8_t htmlml_engine_enqueue(htmlml_engine* engine, const htmlml_input_event* event);
/*
 * Atomically submits a viewport update and its corresponding host rendering
 * opportunity. The worker applies resize listeners/observers before releasing
 * requestAnimationFrame callbacks, without racing two independently awakened
 * enqueue calls. Both records contribute to the ordinary input metrics.
 */
HTMLML_API uint8_t htmlml_engine_enqueue_resize_frame(
    htmlml_engine* engine,
    const htmlml_input_event* resize_event,
    const htmlml_input_event* frame_event);
/*
 * Requests a V8 low-memory collection on this engine's worker thread. This is
 * intended for hidden/idle components or host memory-pressure handling; it
 * queues work and does not block the caller on garbage collection.
 */
HTMLML_API uint8_t htmlml_engine_request_low_memory(htmlml_engine* engine);
/*
 * Declares whether the host is actively presenting this engine. A transition
 * to hidden schedules one debounced low-memory collection on the engine
 * worker; returning visible before the deadline cancels it.
 */
HTMLML_API uint8_t htmlml_engine_set_visible(htmlml_engine* engine, uint8_t visible);
/* Returns the CSS cursor resolved at the latest hit-tested pointer position. */
HTMLML_API uint32_t htmlml_engine_get_cursor(const htmlml_engine* engine);
HTMLML_API uint8_t htmlml_engine_execute_script(
    htmlml_engine* engine,
    const char* source,
    size_t source_length,
    const char* document_name,
    size_t document_name_length);
/*
 * Removes one actual managed-datafeed request from the native V8 bridge. The
 * payload is UTF-8 JSON. A too-small/null destination reports the required
 * size without consuming the request; a successful full copy consumes it.
 */
HTMLML_API size_t htmlml_engine_take_host_request(
    htmlml_engine* engine,
    char* destination,
    size_t destination_capacity);
/*
 * Removes one V8 console entry. The UTF-8 payload is `<level>\n<message>`;
 * querying with a null/short destination reports the required byte count
 * without consuming the entry.
 */
HTMLML_API size_t htmlml_engine_take_console_message(
    htmlml_engine* engine,
    char* destination,
    size_t destination_capacity);
HTMLML_API size_t htmlml_engine_copy_last_error(
    const htmlml_engine* engine,
    char* destination,
    size_t destination_capacity);
/*
 * Starts a new immutable-scene diff chain with a complete checkpoint. Call
 * this after the previous scene consumer has stopped, before attaching a new
 * renderer (for example after compositor/context recreation).
 */
HTMLML_API uint8_t htmlml_engine_request_scene_checkpoint(htmlml_engine* engine);
/*
 * Enables the bounded ordered consumer lane and acquires its oldest pending
 * diff. Unlike acquire_latest, this preserves every base-revision link while
 * allowing the producer to publish one additional immutable diff ahead.
 */
HTMLML_API const htmlml_scene_view* htmlml_engine_acquire_next_scene(htmlml_engine* engine);
HTMLML_API uint8_t htmlml_scene_acknowledge(const htmlml_scene_view* scene);
HTMLML_API void htmlml_scene_release(const htmlml_scene_view* scene);